--- a/mdx/05-fun.mdx
+++ b/mdx/05-fun.mdx
@@ -4,22 +4,37 @@
 alias alert='say -v "$([ $? = 0 ] && echo Good News || echo Bad News)"'
 esc+X pong, snack, solitaire, tetris enter ctrl+X ctrl+c
 cowsay
+https://www.linux.com/tutorials/6how-check-disk-space-linux-command-line/
 -->
 
 ---
 
 ## Make your Mac talk to you
 
-<Highlight top={5} left={0} command="say 'Hello DevIntersection'" />
-<CopyButton top={7} left={0} textToCopy="say 'Hello DevIntersection'" />
-<RunButton top={7} left={12} textToRun="say 'Hello DevIntersection'" />
+<Highlight top={5} left={4} command="say 'Hello DevIntersection'" />
+<CopyButton top={7} left={4} textToCopy="say 'Hello DevIntersection'" />
+<RunButton top={7} left={16} textToRun="say 'Hello DevIntersection'" />
 
 ---
 
 ## Make fun banner messages
 
+-   [figlet](https://github.com/patorjk/figlet.js) - Text to ASCII Art Generator
+-   [figlet-cli](https://www.npmjs.com/package/figlet-cli) - CLI for figlet
+-   [figlet-web](http://patorjk.com/software/taag) - Web Interface for Figlet
+
 ```
 npx figlet-cli "Hello DevIntersection" | lolcatjs
+```
+
+---
+
+## Get Answers from Stack Overflow
+
+-   [how2](https://github.com/santinic/how2) - Stack Overflow from the terminal
+
+```
+npx how-2 -l javascript random hex color
 ```
 
 ---
