--- a/mdx/06-custom.mdx
+++ b/mdx/06-custom.mdx
@@ -110,6 +110,8 @@ If you'd like a standard CLI experience
 
 ## Twenty-Fourty-Eight - Command Line Edition
 
+-   [2048-cmd](https://github.com/elijahmanor/2048-cmd)
+
 ```
 cd ~/github/2048-cmd
 npm start
@@ -125,6 +127,8 @@ Tools used...
 
 ## Twenty-Fourty-Eight - Web Edition
 
+-   [2048-web](https://github.com/elijahmanor/2048-web)
+
 ```
 cd ~/github/2048-web
 npm start
@@ -136,6 +140,28 @@ Tools used...
 -   `react-dom` to render in the browser's DOM
 -   `animate-css-grid` to add animations
 -   `react-swipeable` to add gesture support
+
+---
+
+## This Slideshow Presentation
+
+-   [cmd-fun](https://github.com/elijahmanor/cmd-fun) - Have Fun & Be Productive in the Terminal
+
+```
+git clone https://github.com/elijahmanor/cmd-fun.git
+npm install
+npm start
+```
+
+-   `blessed` for a terminal interface
+-   `react-blessed` to provide React components for blessed
+-   `ansimd` to parse markdown content
+-   `@mdx-js/runtime` to parse mdx content
+-   `cardinal` to highlight some of the content
+-   `chalk` to add color to the interface
+-   `clipboardy` to add content to clipboard
+-   `figlet` to make the banner headings
+-   `shelljs` to execute commands
 
 ---
 
