Final-ish tweaks less than an hour before my talk... eek

--- a/mdx/03-git.mdx
+++ b/mdx/03-git.mdx
@@ -109,6 +109,7 @@ Husky supports all Git hooks found in the [git documentation](https://git-scm.co
 
 ```
 npm install -g diff-so-fancy
+git config --global core.pager "diff-so-fancy | less --tabs=4 -RFX"
 ```
 
 ---
