--- a/mdx/04-tools.mdx
+++ b/mdx/04-tools.mdx
@@ -87,7 +87,7 @@ trash safely-delete-file.js
 -   [vtop](http://parall.ax/vtop) - Wow such top. So stats. More better than regular top
 
 ```
-brew install vtop
+npm install -g vtop
 ```
 
 -   [htop](http://hisham.hm/htop/) - An interactive process viewer for Unix systems
@@ -160,7 +160,7 @@ npx tldr mkdir
 - [fkill-cli](https://github.com/sindresorhus/fkill-cli) - Fabulously kill processes. Cross-platform. 
 
 ```
-npx fkill-cli
+npm i fkill-cli -g
 npx fkill 1337
 npx fkill safari
 npx fkill :8080
