--- a/mdx/05-fun.mdx
+++ b/mdx/05-fun.mdx
@@ -25,6 +25,9 @@ https://www.linux.com/tutorials/6how-check-disk-space-linux-command-line/
 
 ```
 npx figlet-cli "Hello DevIntersection" | lolcatjs
+
+npm i figlet-cli -g
+figlet "Hello DevIntersection" | lolcatjs
 ```
 
 ---
@@ -35,6 +38,9 @@ npx figlet-cli "Hello DevIntersection" | lolcatjs
 
 ```
 npx how-2 -l javascript random hex color
+
+npm i how-2 -g
+how2 -l javascript sort array
 ```
 
 ---
