--- a/mdx/06-custom.mdx
+++ b/mdx/06-custom.mdx
@@ -79,7 +79,7 @@ Tools used...
 
 ## Heart Rate from Today
 
-<HeartRate top={5} left={4} src="heartrate-2019-11-18.csv" />
+<HeartRate top={5} left={4} src="heartrate-2019-11-19.csv" />
 
 ---
 
@@ -161,6 +161,7 @@ npm start
 -   `chalk` to add color to the interface
 -   `clipboardy` to add content to clipboard
 -   `figlet` to make the banner headings
+-   `@darkobits/lolcatjs` for that rainbow magic
 -   `shelljs` to execute commands
 
 ---
