Updated slide to say asciichart instead of babar

--- a/mdx/06-custom.mdx
+++ b/mdx/06-custom.mdx
@@ -90,7 +90,7 @@ Tools used...
 -   `fs` to read the csv file
 -   `csv-parse` to parse the csv file
 -   `date-fns` to format the time
--   `babar` to create an ascii chart
+-   `asciichart` for the heart rate graphing
 
 ---
 
@@ -163,6 +163,7 @@ npm start
 -   `figlet` to make the banner headings
 -   `@darkobits/lolcatjs` for that rainbow magic
 -   `shelljs` to execute commands
+-   `asciichart` for the heart rate graphing
 
 ---
 
